--- a/src/app/shift-calendar/shift-calendar.component.scss
+++ b/src/app/shift-calendar/shift-calendar.component.scss
@@ -3,8 +3,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh; /* Full window height */
-  width: 100vw; /* Full window width */
+  height: 100%; /* Full window height */
+  width: 100%; /* Full window width */
+  min-width: 100%;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
