--- a/src/app/shift-calendar/shift-calendar.component.html
+++ b/src/app/shift-calendar/shift-calendar.component.html
@@ -29,6 +29,8 @@
       [(selected)]="selectedDate"
       (selectedChange)="onDateSelected($event)"
       (monthSelected)="onMonthSelected($event)">
+      (viewChange)="onViewChange($event)">
+
     </mat-calendar>
     
     
