--- a/src/app/chameleon-reports/palliative-patients-report/palliative-patients-report.component.scss
+++ b/src/app/chameleon-reports/palliative-patients-report/palliative-patients-report.component.scss
@@ -5,6 +5,7 @@
     z-index: 10;
 }
 
+/* Table styles */
 table {
     width: 95%;
     margin: 20px 23px 1px 0px;
@@ -14,10 +15,21 @@ table {
     background-color: white;
 }
 
+.mat-row:nth-child(even) {
+    background-color: aliceblue;
+}
+
+.mat-row:hover {
+    background-color: darkgray;
+    cursor: pointer;
+}
+
+/* Spinner styles */
 .spinner {
     left: 50%;
     display: unset;
 }
+
 .spinner-container {
     display: flex;
     align-items: center;
@@ -31,23 +43,12 @@ table {
     z-index: 1000;
 }
 
-.mat-row:nth-child(even) {
-    background-color: aliceblue;
-}
-
-.mat-row:hover {
-    background-color: darkgray;
-    cursor: pointer;
-}
-
+/* Container styles */
 .container {
     min-width: 100%;
 }
 
-mat-card:hover {
-    cursor: pointer;
-}
-
+/* Card styles */
 mat-card {
     width: 48%;
     margin-top: 10%;
@@ -56,185 +57,108 @@ mat-card {
     background: burlywood;
 }
 
+mat-card:hover {
+    cursor: pointer;
+}
+
 mat-card-content {
     font-size: 30px;
     font-weight: bold;
 }
 
+/* Links */
 a {
     cursor: pointer;
 }
 
+/* Filter Form styles */
 .filter-form {
     width: 100%; /* Set the width to 100% to match the table's width */
     padding: 10px; /* Add padding for spacing */
     box-sizing: border-box; /* Include padding in the width calculation */
 }
 
-/* Style the 'name' select box */
-.name-select {
-    /* Set a fixed width to match other input fields */
-    width: auto; /* or specify a width in pixels or percentage */
-    display: flex;
-    align-items: center;
-}
-
-/* Add this CSS to your stylesheet */
-.name-select .mat-select-arrow {
-    position: absolute !important;
-    top: 5px !important; /* Adjust this value to position the arrow vertically as needed */
-    left: 5px !important; /* Adjust this value to position the arrow horizontally as needed */
-}
-
-/* Add this CSS to your stylesheet */
-.name-select {
-    width: 170px; /* Adjust the width to your desired size */
-    height: 0px;
-}
-::ng-deep .mat-form-field {
-    width: 100%;
-}
-/* Add margin to the mat-form-field elements */
 .filter-field {
-    margin-right: 20px; /* Adjust the margin as needed */
+    margin-right: 20px;
+    width: calc(15% - 20px); /* Adjust width to fit multiple fields in a row */
+    padding-top: 5px;
 }
 
-/* Set a fixed width and height for the mat-form-field elements */
-.filter-field {
-    width: 315px; /* Adjust the width as needed */
-    height: 80px; /* Adjust the height as needed */
-    width: calc(15% - 20px); /* 25% to fit four filters in a row with spacing */
-    padding-top: 5px; /* Adjust this value to control the vertical spacing */
-}
-
-/* Change the font family, color, and font size of the filter labels */
 .filter-field mat-label {
-    font-family: Arial, sans-serif; /* Change to your desired font family */
-    color: black; /* Change to your desired color */
+    font-family: Arial, sans-serif;
+    color: black;
     font-size: 16px;
 }
 
-/* CSS */
 .filter-container {
     display: flex;
-    flex-wrap: nowrap; /* Change to nowrap to prevent wrapping to the next line */
+    flex-wrap: nowrap; /* Prevent wrapping */
     justify-content: space-between;
     align-items: center;
     width: 100%;
 }
 
-.filter-field {
-    flex-grow: 1;
-    margin-right: 20px;
-    min-width: 200px; /* Ensure the fields have a minimum width */
-    max-width: calc(100% / 6 - 20px); /* Adjust this calculation to fit the desired number of filters per row */
-}
-
 .name-select {
     width: 100%;
+    text-align: right;
+    direction: rtl;
 }
 
-/* Remove the width and height of name-select */
 .name-select-wrapper .mat-select-arrow {
     position: absolute !important;
     top: 5px !important;
     left: 5px !important;
-    /* Adjust this value to position the arrow horizontally as needed */
 }
 
-/* Move the reset button to the bottom-left corner of the card-body */
-.reset-button-container {
-    position: absolute;
-    bottom: 10px; /* Adjust the bottom position as needed */
-    right: 10px; /* Adjust the right position as needed */
+::ng-deep .mat-form-field {
+    width: 100%;
 }
 
-/* Adjust the padding of the card-body to make space for the reset button */
-.card-body {
-    position: relative;
-    padding-left: 40px; /* Adjust the padding-left to make space for the button */
-}
-
-/* Add space between the end of the search bar and the start of the Excel icon */
-.icon {
-    margin-left: 10px; /* Adjust the margin as needed for spacing */
-}
-
-/* Add this CSS to your stylesheet */
-.filter-input {
-    text-align: right; /* Align the input text to the right */
-    direction: rtl; /* Set the text direction to right-to-left */
-}
-
-/* Add this CSS to your stylesheet */
-.name-select .mat-select-value {
-    text-align: right; /* Align the selected text to the right */
-    direction: rtl; /* Set the text direction to right-to-left */
-}
-
-/* Use ::ng-deep to override Angular's View Encapsulation */
 ::ng-deep .mat-select-trigger {
     text-align: right !important;
     direction: rtl !important;
 }
-.nine {
+
+/* Buttons */
+.button {
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
-    text-align: center;
-}
-
-.nine h1 {
-    font-size: 50px;
-    text-transform: uppercase;
-    color: rgb(54, 10, 214);
-    letter-spacing: 1px;
-    font-family: "Playfair Display", serif;
-    font-weight: 400;
-    margin: 0; /* Ensure there is no margin */
-}
-
-.nine h1 span {
-    display: block;
-    margin-top: 5px;
-    font-size: 15px;
-    color: rgb(159, 52, 235);
-    word-spacing: 1px;
-    font-weight: normal;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    font-family: "Raleway", sans-serif;
-    font-weight: 500;
-}
-
-/* Adjust the position of the date picker icon */
-::ng-deep .mat-datepicker-toggle {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
     align-items: center;
-    justify-content: flex-start;
-    padding-left: 5px; /* Adjust as needed for positioning */
+    width: 50px;
+    height: 50px;
+    font-size: 16px;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    border: none;
 }
 
-/* Adjust the input padding to avoid overlap with the icon */
-::ng-deep .mat-form-field-infix {
-    padding-left: 30px; /* Adjust the padding to accommodate the icon size */
+/* Reset Button */
+.reset-button {
+    background-color: #673ab7; /* Purple */
+    color: white;
 }
 
-/* If needed, adjust the alignment of the datepicker input text */
-::ng-deep .mat-input-element {
-    text-align: right; /* or 'left' depending on your layout */
+/* Excel Button */
+.excel-button {
+    background-color: #4caf50; /* Green */
+    color: white;
 }
 
-.top-right-container {
-    display: flex;
-    justify-content: flex-end; /* Aligns horizontally to the right */
-    padding: 10px; /* Add some padding */
+/* Icon styles */
+.download-icon,
+button i.material-icons {
+    font-size: 24px;
+    width: 24px;
+    height: 24px;
 }
 
+.icon {
+    margin-left: 10px;
+    cursor: pointer;
+}
+
+/* Loading overlay */
 .loading-overlay {
     display: flex;
     align-items: center;
@@ -261,14 +185,7 @@ a {
     margin-top: 20px;
 }
 
-/* Add styling for the button card */
-.button-card {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 20px;
-}
-
+/* Button card styles */
 .button-card {
     display: flex;
     justify-content: space-between;
@@ -282,28 +199,62 @@ a {
 }
 
 .custom-button {
-    margin-right: 10px; /* Adjust the margin as needed for spacing */
+    margin-right: 10px;
     display: flex;
     align-items: center;
 }
 
-.icon {
-    margin-left: 10px; /* Adjust the margin as needed for spacing */
-    cursor: pointer;
+/* Nine section styles */
+.nine {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
-.mat-icon {
-    font-size: 24px; /* Ensure all mat-icons have the same size */
+.nine h1 {
+    font-size: 50px;
+    text-transform: uppercase;
+    color: rgb(54, 10, 214);
+    letter-spacing: 1px;
+    font-family: "Playfair Display", serif;
+    font-weight: 400;
+    margin: 0;
 }
 
-.download-icon {
-    width: 24px; /* Set the width of the Excel icon to match the size of mat-icons */
-    height: 24px; /* Set the height to match */
+.nine h1 span {
+    display: block;
+    margin-top: 5px;
+    font-size: 15px;
+    color: rgb(159, 52, 235);
+    word-spacing: 1px;
+    font-weight: normal;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    font-family: "Raleway", sans-serif;
 }
 
-button i.material-icons {
-    font-size: 24px; /* Ensure all icons inside buttons have the same size */
+/* Datepicker styles */
+::ng-deep .mat-datepicker-toggle {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    align-items: center;
+    justify-content: flex-start;
+    padding-left: 5px;
 }
+
+::ng-deep .mat-form-field-infix {
+    padding-left: 30px;
+}
+
+::ng-deep .mat-input-element {
+    text-align: right;
+}
+
+/* Creator Message */
 .creator-message {
     position: fixed;
     top: 10px;
@@ -321,13 +272,30 @@ button i.material-icons {
     position: fixed;
     top: 0;
     right: 0;
-    width: 100px; /* Adjust the width as needed */
-    height: 100px; /* Adjust the height as needed */
+    width: 100px;
+    height: 100px;
     z-index: 1000;
     cursor: pointer;
 }
 
-/* Ensure the creator message is shown when hovering over the hover area */
 .hover-area:hover + .creator-message {
     display: block;
+}
+
+/* Misc styles */
+.top-right-container {
+    display: flex;
+    justify-content: flex-end;
+    padding: 10px;
+}
+
+.reset-button-container {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+}
+
+.card-body {
+    position: relative;
+    padding-left: 40px;
 }
