--- a/src/app/chameleon-reports/palliative-patients-report/palliative-patients-report.component.html
+++ b/src/app/chameleon-reports/palliative-patients-report/palliative-patients-report.component.html
@@ -60,7 +60,7 @@
 
               <!-- Record Count Filter -->
               <mat-form-field class="filter-field">
-                <mat-label>מספר הרשומות</mat-label>
+                <mat-label>כמות אשפוזים </mat-label>
                 <mat-select
                   formControlName="RecordCount"
                   (selectionChange)="onFilterChange('RecordCount', $event.value)"
