--- a/src/app/chameleon-reports/search-by-case-number/search-by-case-number.component.html
+++ b/src/app/chameleon-reports/search-by-case-number/search-by-case-number.component.html
@@ -54,9 +54,9 @@
       </ng-container>
   
       <!-- Discharge Date Column -->
-      <ng-container matColumnDef="PMDischargeDate">
+      <ng-container matColumnDef="PMMoveDate">
         <mat-header-cell *matHeaderCellDef mat-sort-header> תאריך שחרור </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{ element.PMDischargeDate | date: 'dd/MM/yyyy' }} </mat-cell>
+        <mat-cell *matCellDef="let element"> {{ element.PMMoveDate | date: 'dd/MM/yyyy' }} </mat-cell>
       </ng-container>
   
       <!-- Discharge Time Column
