--- a/src/app/chameleon-reports/epidemiological-investigation/epidemiological-investigation.component.html
+++ b/src/app/chameleon-reports/epidemiological-investigation/epidemiological-investigation.component.html
@@ -1,5 +1,8 @@
 <div class="body">
-    <h1>{{ titleUnit }}</h1>
+    <div class="nine">
+        <h1>{{ titleUnit }}<span>סה"כ תוצאות:{{ totalResults }}</span></h1>
+      </div>
+    
   
     <!-- Filter Form -->
     <form [formGroup]="filterForm" dir="rtl" class="filter-form">
