--- a/src/app/chameleon-reports/epidemiological-investigation/epidemiological-investigation.component.html
+++ b/src/app/chameleon-reports/epidemiological-investigation/epidemiological-investigation.component.html
@@ -103,24 +103,25 @@
       <!-- Tab 2: Timeline View -->
       <mat-tab label="ציר זמן">
         <div class="timeline-container">
-            <h1>{{ titleUnit }}</h1>
-            <div *ngIf="timelineEvents.length > 0" class="timeline">
-              <div *ngFor="let event of timelineEvents; let i = index" class="timeline-item">
-                <div class="timeline-year">{{ event.timestamp.split(' ')[0] }}</div>
-                <div class="timeline-content" [class.left]="i % 2 === 0" [class.right]="i % 2 !== 0">
-                  <div class="timeline-dot"></div>
-                  <div class="timeline-card">
-                    <h3>{{ event.title }}</h3>
-                    <p>{{ event.description }}</p>
-                    <span class="timeline-date">{{ event.timestamp }}</span>
-                  </div>
+          <h1>{{ titleUnit }}</h1>
+          <div *ngIf="timelineEvents.length > 0" class="timeline">
+            <div *ngFor="let event of timelineEvents; let i = index" class="timeline-item">
+              <div class="timeline-year">{{ event.timestamp | date: 'dd/MM/yyyy' }}</div>
+              <div class="timeline-content" [class.left]="i % 2 === 0" [class.right]="i % 2 !== 0">
+                <div class="timeline-dot"></div>
+                <div class="timeline-card">
+                  <h3>{{ event.title }}</h3>
+                  <p>שם רכיב: {{ event.description }}</p>
+                  <p>מחלקה: {{ event.UnitName }}</p> <!-- Added UnitName -->
+                  <span class="timeline-date">{{ event.timestamp | date: ' HH:mm:ss ' }}</span>
                 </div>
               </div>
             </div>
-            <p *ngIf="timelineEvents.length === 0">No timeline events available.</p>
           </div>
-          
+          <p *ngIf="timelineEvents.length === 0">No timeline events available.</p>
+        </div>
       </mat-tab>
+      
           
   
     </mat-tab-group>
