--- a/src/app/chameleon-reports/epidemiological-investigation/epidemiological-investigation.component.scss
+++ b/src/app/chameleon-reports/epidemiological-investigation/epidemiological-investigation.component.scss
@@ -228,10 +228,11 @@
     padding: 10px; /* Add some padding */
   }
   .timeline-container {
-    margin: 0 auto;
-    max-width: 800px;
-    font-family: Arial, sans-serif;
+    display: flex;
+    flex-direction: column; /* Keep the timeline vertical */
+    align-items: center; /* Center all items horizontally */
   }
+  
   
   .timeline {
     position: relative;
@@ -259,6 +260,7 @@
         left: -60px;
         font-size: 14px;
         color: #777;
+        font-weight: bold;
       }
   
       .timeline-content {
@@ -276,29 +278,20 @@
         }
   
         .timeline-card {
-          background-color: #f5faff;
-          padding: 15px;
-          border-radius: 8px;
-          box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
-          max-width: 300px;
-  
-          h3 {
-            margin: 0 0 10px;
-            font-size: 16px;
-            font-weight: bold;
-          }
-  
-          p {
-            margin: 0 0 5px;
-            font-size: 14px;
-            color: #555;
-          }
-  
-          .timeline-date {
-            font-size: 12px;
-            color: #999;
-          }
+          width: 350px; /* Fixed width for all cards */
+          height: 150px; /* Fixed height for all cards */
+          background-color: #f0f8ff; /* Light background color */
+          border-radius: 8px; /* Rounded corners */
+          padding: 10px; /* Spacing inside the card */
+          box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Subtle shadow */
+          display: flex;
+          flex-direction: column; /* Align content vertically */
+          justify-content: space-between; /* Distribute space evenly */
+          align-items: center; /* Align items to the left */
+          overflow: hidden; /* Hide overflow content */
+          text-align: center; /* Align text */
         }
+        
       }
     }
   }
